AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

INCLUDE_DIRECTORIES(
../../RayTracing;
)

ADD_EXE( Balls "${INC}" "${SRC}" )
SET_PROPERTY(TARGET Balls PROPERTY FOLDER "Scene")

ADD_DEPENDENCIES( Balls RayTracing )
TARGET_LINK_LIBRARIES( Balls RayTracing )