AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

INCLUDE_DIRECTORIES(
../../RayTracing;
)

ADD_EXE( CornellBox "${INC}" "${SRC}" )
SET_PROPERTY(TARGET CornellBox PROPERTY FOLDER "Scene")

ADD_DEPENDENCIES( CornellBox RayTracing )
TARGET_LINK_LIBRARIES( CornellBox RayTracing )