AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

INCLUDE_DIRECTORIES(
../../RayTracing;
)

ADD_EXE( MCIntegration "${INC}" "${SRC}" )
SET_PROPERTY(TARGET MCIntegration PROPERTY FOLDER "Scene")

ADD_DEPENDENCIES( MCIntegration RayTracing )
TARGET_LINK_LIBRARIES( MCIntegration RayTracing )